chaned Cargo file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "bevy_animations"
 version = "0.1.0"
 edition = "2021"
+authors = ["aarongraybill3@gmail.com"]
+description = "2d Game Animation Engine built for Bevy"
+license = "MIT OR Apache-2.0"
+keywords = ["gamedev", "graphics", "bevy", "animations"]
+homepage = "https://github.com/y0Phoenix/bevy_animations"
+repository = "https://github.com/y0Phoenix/bevy_animations.git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
