--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 keywords = ["gamedev", "graphics", "bevy", "animations"]
 homepage = "https://github.com/y0Phoenix/bevy_animations"
 repository = "https://github.com/y0Phoenix/bevy_animations.git"
-documentation = ""
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
